[gd_scene load_steps=9 format=3 uid="uid://bqgrmwyve3uqx"]

[ext_resource type="Texture2D" uid="uid://dnqbwrtos4r5a" path="res://assets/botoes/som-desligado.png" id="1_aljfo"]
[ext_resource type="Texture2D" uid="uid://46fm0nqpror2" path="res://assets/botoes/som-ligado.png" id="2_0k0tx"]
[ext_resource type="Script" uid="uid://dafkkh1vraftq" path="res://scripts/narracao.gd" id="3_bvwr6"]
[ext_resource type="Texture2D" uid="uid://csge83w5q2ngb" path="res://assets/1695035061448.png" id="4_4ie7o"]
[ext_resource type="Texture2D" uid="uid://y5y0okhxn2o4" path="res://assets/botoes/prox.png" id="5_boag4"]
[ext_resource type="Texture2D" uid="uid://br0w3x4rnlfr7" path="res://assets/botoes/prox-pressionado.png" id="6_eg0vd"]
[ext_resource type="Script" uid="uid://8uqly684mmy8" path="res://scripts/botoes.gd" id="7_7f4nk"]
[ext_resource type="AudioStream" uid="uid://bnwgtiuwwtvxl" path="res://assets/narracoes/capa.ogg" id="8_bukyd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.305882, 0.372549, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="BotaoSom" type="TextureButton" parent="ColorRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
texture_normal = ExtResource("1_aljfo")
texture_pressed = ExtResource("2_0k0tx")
script = ExtResource("3_bvwr6")

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="RichTextLabel2" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
text = "Jo√£o de Barros e Silva Neto
2025.2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 48
text = "Desigualdades no Brasil"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_4ie7o")

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_bvwr6")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="ProxPagBotao" type="TextureButton" parent="ColorRect/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
texture_normal = ExtResource("5_boag4")
texture_pressed = ExtResource("6_eg0vd")
script = ExtResource("7_7f4nk")

[node name="NarracaoPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_bukyd")

[connection signal="pressed" from="ColorRect/MarginContainer/BotaoSom" to="ColorRect/MarginContainer/BotaoSom" method="reproduzir_narracao"]
[connection signal="pressed" from="ColorRect/MarginContainer/MarginContainer/VBoxContainer/ProxPagBotao" to="ColorRect/MarginContainer/MarginContainer/VBoxContainer/ProxPagBotao" method="proxPag"]
